fix spacing in menu

--- a/themes/hello-friend-ng/assets/scss/_menu.scss
+++ b/themes/hello-friend-ng/assets/scss/_menu.scss
@@ -1,6 +1,6 @@
 .menu {
   background: var(--contrasted-background, #fafafa);
-  margin-right: 18px;
+  // margin-right: 18px;
   z-index: 9999;
 
 
